tests/vertical-slice/reject/fork_block_arg_type_mismatch.hew
// Reject fixture: fork-block body with a type-mismatched argument.
//
// R1 pin: the `fork { … }` block form is nullary — the checker never visits
// block bodies, so argument types there would be unchecked. HIR lowering
// rejects arg-bearing block callees with a `ForkBlockBodyUnsupported`
// diagnostic (source span present) BEFORE MIR or codegen see the call.
//
// Without this gate, `fork { flag(42); }` (flag: bool → accepts bool, given
// i64 literal 42) silently miscompiles; `fork { sink("s"); }` (sink: i64)
// escapes to `E_CODEGEN_FRONT … Call parameter type does not match function
// signature!` (no source span). Both are blocked here.
//
// Argument-bearing spawns must use the named form:
//   `fork t = flag(true); await t;`
//
// This fixture pins the fail-closed boundary at:
//   hew-hir/src/lower.rs  check_fork_block_shape (args.is_empty gate)
//
// When fork-block bodies gain checker coverage, this gate may be relaxed
// and this fixture moved to accept/.
//
// Harness verb: hew compile
// Expected diagnostics:
//   - E_HIR
//   - "fork block callee must have zero arguments"
fn flag(b: bool) {
    println(f"{b}");
}

actor _Worker {
    receive fn run() {
        scope {
            fork { flag(42); }
        };
    }
}

fn main() -> i64 {
    let w = spawn _Worker;
    w.run();
    0
}
